# paste_bin

./: Cargo.toml  pastes.db
src/: main.rs
uploads/: xVt3BScF
