[package]
name = "paste_bin"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
nanoid = "0.4"
tokio = { version = "1.47.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
